--- a/main.css
+++ b/main.css
@@ -310,7 +310,7 @@ body > .row.header-row {
   padding-top: 0;
   padding-bottom: 50px;
   background-color: #000;
-  background-image: url('http://themes.coffeecup.com/bootstrap-builder/technologic/images/rainbow-phone-header.jpg');
+  background-image: url('https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/rainbow-phone-header.jpg');
   background-attachment: scroll;
   background-position: center top;
   background-clip: border-box;
@@ -328,10 +328,10 @@ body > .row.information-row {
 body > .row.offer-row {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: -webkit-linear-gradient(285deg, rgba(0, 0, 0, .62) 70%, rgba(29, 30, 33, .17) 100%), url('https://a-multi-religion-election-system.multireligionvalsystem.eu.org/multi-device.jpg');
-  background-image:    -moz-linear-gradient(285deg, rgba(0, 0, 0, .62) 70%, rgba(29, 30, 33, .17) 100%), url('http://themes.coffeecup.com/bootstrap-builder/technologic/images/multi-devices-colorful.jpg');
-  background-image:      -o-linear-gradient(285deg, rgba(0, 0, 0, .62) 70%, rgba(29, 30, 33, .17) 100%), url('http://themes.coffeecup.com/bootstrap-builder/technologic/images/multi-devices-colorful.jpg');
-  background-image:         linear-gradient(165deg, rgba(0, 0, 0, .62) 70%, rgba(29, 30, 33, .17) 100%), url('http://themes.coffeecup.com/bootstrap-builder/technologic/images/multi-devices-colorful.jpg');
+  background-image: -webkit-linear-gradient(285deg, rgba(0, 0, 0, .62) 70%, rgba(29, 30, 33, .17) 100%), url('https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/multi-device.jpg');
+  background-image:    -moz-linear-gradient(285deg, rgba(0, 0, 0, .62) 70%, rgba(29, 30, 33, .17) 100%), url('https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/multi-devices-colorful.jpg');
+  background-image:      -o-linear-gradient(285deg, rgba(0, 0, 0, .62) 70%, rgba(29, 30, 33, .17) 100%), url('https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/multi-devices-colorful.jpg');
+  background-image:         linear-gradient(165deg, rgba(0, 0, 0, .62) 70%, rgba(29, 30, 33, .17) 100%), url('https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/multi-devices-colorful.jpg');
   background-attachment: scroll, scroll;
   background-position: left top, center center;
   background-clip: border-box, border-box;
@@ -385,7 +385,7 @@ body > .row > [class*='col-xs-'].review-column {
 body > .row.price-row {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url('http://themes.coffeecup.com/bootstrap-builder/technologic/images/tech-lights.jpg');
+  background-image: url('https://discover-the-power-of-cctlds.multireligionvalsystem.eu.orgtech-lights.jpg');
   background-attachment: scroll;
   background-position: center center;
   background-clip: border-box;
@@ -817,7 +817,7 @@ span.glyph.address-icon {
 }
 
 .container-fluid#flex-container-2 {
-  background-image: url('http://themes.coffeecup.com/bootstrap-builder/technologic/images/entrepreneur.jpg');
+  background-image: url('https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/entrepreneur.jpg');
 }
 
 .container-fluid.news-container {
@@ -853,7 +853,7 @@ span.glyph.feature-icon:hover {
   }
 
   body > .row#contact {
-    background-image: url('http://themes.coffeecup.com/bootstrap-builder/technologic/images/rainbow-blast.png');
+    background-image: url('http://themes.coffeecup.com/bootstrap-builder/technologic/images/rainbow-phone-header.jpg');
   }
 
   .container-fluid.footer-container {
@@ -880,7 +880,7 @@ span.glyph.feature-icon:hover {
   }
 
   .container-fluid#flex-container-2 {
-    background-image: url('http://themes.coffeecup.com/bootstrap-builder/technologic/images/entrepreneur.jpg');
+    background-image: url('https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/entrepreneur.jpg');
   }
 
   .container-fluid#container-1 {
